# agenterra

./: .gitignore  .windsurfrules  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  release-plz.toml  release.toml  rustfmt.toml
.github/: branch_protection.json  copilot-instructions.md
.github/workflows/: ci.yml  release-plz.yml  release-pr.yml  release.yml
crates/agenterra-cli/: CHANGELOG.md  Cargo.toml
crates/agenterra-cli/src/: main.rs
crates/agenterra-cli/tests/: e2e_mcp_test.rs  integration_test.rs
crates/agenterra-cli/tests/test_utils/: mod.rs
crates/agenterra-client/: Cargo.toml
crates/agenterra-client/src/: auth.rs  cache.rs  client.rs  error.rs  lib.rs  registry.rs  resource.rs  transport.rs
crates/agenterra-core/: Cargo.toml
crates/agenterra-core/src/: generate.rs  openapi.rs
crates/agenterra-core/src/builders/: mod.rs  rust.rs
crates/agenterra-core/src/templates/: manager.rs  mod.rs
crates/agenterra-mcp/: Cargo.toml
crates/agenterra-mcp/src/: generate.rs  lib.rs  manifest.rs
crates/agenterra-mcp/src/builders/: rust.rs
crates/agenterra-mcp/src/templates/: dir.rs  manager.rs
crates/mcpgen-cli/src/: main.rs
crates/mcpgen-cli/tests/: integration_test.rs
crates/mcpgen-core/src/: config.rs  generate.rs  lib.rs  openapi.rs  template_dir.rs  template_kind.rs  template_manager.rs
crates/mcpgen-core/src/builders/: mod.rs  rust.rs
crates/rmcp/: Cargo.toml
crates/rmcp-macros/: Cargo.toml
crates/rmcp/src/: model.rs
docs/: AGENT_INSTRUCTIONS.md  ARRAY_PARAMETER_HANDLING.md  CLI_REFERENCE.md  CONFIGURATION.md  ENTERPRISE_SECURITY.md  SECURITY.md  TEMPLATES.md  TEMPLATE_VALIDATION.md  claude-code-flow-setup.md
plans/: 0089-01-doc-template-migration-audit.md  0089-02-plan-mcp-client-upgrades.md  0089-pre-pr-code-review.md  code_review_issue_90.md
src/: main.rs
src/application/: commands.rs  errors.rs  generate_client.rs  generate_server.rs  mod.rs  template_management.rs  traits.rs
src/core/: config.rs  error.rs  mod.rs  openapi.rs  protocol.rs  utils.rs
src/core/templates/: dir.rs  embedded.rs  kind.rs  manager.rs  manifest.rs  mod.rs  options.rs  repository.rs  source.rs
src/generation/: README.md  context.rs  errors.rs  mod.rs  orchestrator.rs  rules.rs  sanitizers.rs  traits.rs  types.rs  utils.rs
src/generation/adapters/: mod.rs  template_discovery_adapter.rs
src/infrastructure/: mod.rs
src/infrastructure/generation/: default_renderer.rs  mcp_server_renderer.rs  mod.rs  post_processor.rs  renderer_factory.rs  template_renderer.rs
src/infrastructure/generation/context_builders/: mod.rs  python.rs  registry.rs  rust.rs  typescript.rs
src/infrastructure/openapi/: composite_loader.rs  context.rs  file_loader.rs  future_types.rs  http_loader.rs  mod.rs  parser.rs  types.rs
src/infrastructure/output/: filesystem_output.rs  mod.rs
src/infrastructure/shell/: command_executor.rs  mod.rs
src/infrastructure/templates/: embedded_repository.rs  errors.rs  filesystem_loader.rs  loader_adapter.rs  manifest.rs  mod.rs  traits.rs  types.rs
src/integration/: mod.rs
src/mcp/: generate.rs  manifest.rs  mod.rs
src/mcp/builders/: mod.rs  rust.rs
src/mcp/client/: auth.rs  cache.rs  client.rs  mcp_client.rs  mcp_session_manager.rs  mod.rs  registry.rs  result.rs  transport.rs
src/mcp/templates/: dir.rs  manager.rs
src/protocols/: README.md  errors.rs  mod.rs  registry.rs  traits.rs  types.rs
src/protocols/handlers/: mcp.rs  mod.rs
templates/mcp/client/rust/: README.md.tera  manifest.yml  validation.toml.tera
templates/mcp/client/rust/src/: main.rs.tera
templates/mcp/client/rust/src/api/: mod.rs.tera
templates/mcp/client/rust/src/application/: auth.rs.tera  registry.rs.tera  session_manager.rs.tera  validation.rs.tera
templates/mcp/client/rust/src/cli/: args.rs.tera
templates/mcp/client/rust/src/domain/: mod.rs.tera  operations.rs.tera
templates/mcp/client/rust/src/infrastructure/: transport.rs.tera
templates/mcp/client/rust/src/ui/: headless.rs.tera  repl.rs.tera
templates/mcp/client/rust/tests/: sse_integration_tests.rs.tera
templates/mcp/client/rust_reqwest/: Cargo.toml.tera  README.md.tera  manifest.yaml  manifest.yml
templates/mcp/client/rust_reqwest/src/: auth.rs.tera  cache.rs.tera  cli.rs.tera  client.rs.tera  config.rs.tera  database.rs.tera  error.rs.tera  headless.rs.tera  lib.rs.tera  main.rs.tera  registry.rs.tera  repl.rs.tera  resource.rs.tera  result.rs.tera  session_manager.rs.tera  transport.rs.tera  transport_mode.rs.tera
templates/mcp/client/rust_reqwest/src/application/: config.rs.tera  mod.rs.tera  registry.rs.tera  result.rs.tera  validation.rs.tera  validation_config.rs.tera
templates/mcp/client/rust_reqwest/src/cli/: args.rs.tera  auth.rs.tera  config.rs.tera  headless.rs.tera  interactive.rs.tera  mod.rs.tera  runner.rs.tera
templates/mcp/client/rust_reqwest/src/domain/: capabilities.rs.tera  client.rs.tera  connection.rs.tera
templates/mcp/client/rust_reqwest/src/infrastructure/: error.rs.tera  mod.rs.tera  transport.rs.tera
templates/mcp/client/rust_reqwest/src/test_utils/: mod.rs.tera  simple_mock.rs.tera
templates/mcp/client/rust_reqwest/src/ui/: mod.rs.tera  repl.rs.tera
templates/mcp/client/rust_reqwest/tests/: README.md  test_with_mock_server.rs.tera
templates/mcp/common/: transport.rs.tera
templates/mcp/server/rust/: README.md.tera  handler.rs.tera  handlers_mod.rs.tera  manifest.yml  server.rs.tera
templates/mcp/server/rust_axum/: Cargo.toml.tera  README.md.tera  common.rs.tera  config.rs.tera  handler.rs.tera  handlers_mod.rs.tera  main.rs.tera  manifest.yaml  manifest.yml  server.rs.tera  transport.rs.tera
templates/rust_axum/: config.rs.tera  handler.rs.tera  handlers_mod.rs.tera  server.rs.tera
tests/: array_params_integration_test.rs  array_params_test.rs  cli_templates_test.rs  e2e_mcp_test.rs  mcp_array_handling_test.rs  template_migration_test.rs
tests/fixtures/templates/mcp/client/rust/: Cargo.toml.tera  README.md.tera  client_test_marker.txt  domain_client.rs.tera  lib.rs.tera  (+5 more)
(+14 files in other folders)
