[workspace]
members = [
    ".",
    "crates/rmcp",
    "crates/rmcp-macros",
]
resolver = "2"

[package]
name = "agenterra"
version = "0.1.1"
edition = "2024"
license = "MIT"
default-run = "agenterra"

[[bin]]
name = "agenterra"
path = "src/main.rs"

[features]
mcp_client = []


[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
futures = "0.3"
log = "0.4"
once_cell = "1.19"
openapiv3 = "2.1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
regex = "1.9"
reqwest = { version = "0.11", features = [
    "json",
    "stream",
    "rustls-tls",
], default-features = false }
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }
rusqlite_migration = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-value = "0.7"
serde_yaml = "0.9"
tera = "1.19"
thiserror = "1.0"
tempfile = "3.10"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
url = { version = "2.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
zeroize = { version = "1.7", features = ["derive"] }

# MCP Protocol SDK (workspace path)
rmcp = { path = "crates/rmcp", version = "0.1.5", features = [
    "client",
    "transport-child-process",
] }

[dev-dependencies]
lazy_static = "1.4.0"
tracing-test = "0.2"
tokio-test = "0.4"
wiremock = "0.6"
