[workspace]
members = [
    ".",
    "crates/rmcp",
    "crates/rmcp-macros",
]
resolver = "2"

[package]
name = "agenterra"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Generate production-ready MCP (Model Context Protocol) servers and clients from OpenAPI specs"
repository = "https://github.com/clafollett/agenterra"
homepage = "https://github.com/clafollett/agenterra"
documentation = "https://github.com/clafollett/agenterra"
readme = "README.md"
keywords = ["mcp", "openapi", "generator", "protocol", "client-server"]
categories = ["development-tools", "api-bindings"]
default-run = "agenterra"

[[bin]]
name = "agenterra"
path = "src/main.rs"

[features]
mcp_client = []


[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
futures = "0.3"
log = "0.4"
once_cell = "1.21"
openapiv3 = "2.2.0"
r2d2 = "0.8"
r2d2_sqlite = "0.30"
regex = "1.11"
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "rustls-tls",
], default-features = false }
rusqlite = { version = "0.36", features = ["bundled", "serde_json"] }
rusqlite_migration = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-value = "0.7"
serde_yaml = "0.9"
tera = "1.20"
thiserror = "2.0"
tempfile = "3.20"
tokio = { version = "1.45", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.17", features = ["v4"] }
zeroize = { version = "1.8", features = ["derive"] }

# MCP Protocol SDK (workspace path)
rmcp = { path = "crates/rmcp", version = "0.1.5", features = [
    "client",
    "transport-child-process",
] }

[dev-dependencies]
lazy_static = "1.5.0"
tracing-test = "0.2"
tokio-test = "0.4"
wiremock = "0.6"
