[package]
name = "agenterra-client"
version = "0.1.0"
edition = "2024"
description = "Ergonomic MCP client library for Agenterra"
license = "MIT OR Apache-2.0"

[dependencies]
# MCP Protocol SDK (official)
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", package = "rmcp", features = ["client", "transport-child-process"] }

# Core dependencies (mirroring agenterra-core)
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = [
    "fs",
    "io-util", 
    "rt-multi-thread",
    "macros",
    "process",
    "sync",
    "time",
] }
url = { version = "2.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.3"
tokio-test = "0.4"
wiremock = "0.6"